--- a/package.json
+++ b/package.json
@@ -4,22 +4,24 @@
   "description": "A small library to handle Geo Web Coordinates",
   "main": "index.ts",
   "scripts": {
-    "test": "asp --nortrace --verbose",
-    "asbuild:untouched": "asc assembly/index.ts --target debug",
-    "asbuild:optimized": "asc assembly/index.ts --target release",
-    "asbuild": "npm run asbuild:untouched && npm run asbuild:optimized"
+    "test": "asp --verbose",
+    "asbuild:debug": "asc assembly/index.ts --target debug",
+    "asbuild:release": "asc assembly/index.ts --target release",
+    "asbuild": "npm run asbuild:debug && npm run asbuild:release"
   },
-  "keywords": [
-    "geoweb"
-  ],
+  "keywords": ["geoweb"],
   "author": "Cody Hatfield <cody.hatfield@me.com>",
   "license": "MIT",
-  "dependencies": {
-    "@assemblyscript/loader": "^0.17.0"
-  },
   "devDependencies": {
-    "@as-pect/cli": "^4.0.0",
-    "assemblyscript": "^0.17.0",
-    "ts-node": "^9.0.0"
-  }
+    "@as-pect/cli": "^8.0.1",
+    "assemblyscript": "^0.25.2"
+  },
+  "type": "module",
+  "exports": {
+    ".": {
+      "import": "./build/release.js",
+      "types": "./build/release.d.ts"
+    }
+  },
+  "files": ["build"]
 }
